.metadata/.plugins/org.eclipse.cdt.ui/program.build.log
14:38:38 **** Incremental Build of configuration Debug for project program ****
make all 
Building file: ../src/program.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/program.d" -MT"src/program.o" -o "src/program.o" "../src/program.c"
../src/program.c: In function ‘main’:
../src/program.c:32:1: error: expected declaration or statement at end of input
   32 | }
      | ^
make: *** [src/subdir.mk:20: src/program.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

14:38:38 Build Failed. 2 errors, 0 warnings. (took 163ms)

